# multi-protocol-client

./: .gitignore  README.md  analyze_results.py  go.sum  main.go  makefile  run_tests.py
csharp/: GraphqlClient.cs  GrpcClient.cs  Program.cs  RestClient.cs  SoapClient.cs  csharp.csproj  makefile
go/: go.mod  main.go  makefile
go/graphqlclient/: graphqlClient.go
go/grpcclient/: grpcClient.go
go/proto/: dtos.pb.go  dtos.proto
go/restclient/: restClient.go
go/soapclient/: soapClient.go
graphqlclient/: graphqlClient.go
grpcclient/: grpcClient.go
proto/: dtos_grpc.pb.go
python/: main.py  requirements.txt
python/clients/: graphql_client.py  grpc_client.py  rest_client.py  soap_client.py
python/clients/proto/: dtos_pb2.py  dtos_pb2_grpc.py
restclient/: restClient.go
rust/: Cargo.toml  build.rs  makefile
rust/schema/: query.graphql  schema.graphql
rust/src/: graphql_client.rs  grpc_client.rs  main.rs  rest_client.rs  soap_client.rs
soapclient/: soapClient.go
typescript/: makefile  package-lock.json  package.json  tsconfig.json
typescript/src/: graphqlClient.ts  grpcClient.ts  index.ts  restClient.ts  soapClient.ts
typescript/src/proto/: dtos_grpc_pb.js  dtos_pb.d.ts  dtos_pb.js
