[package]
name = "load_test_clients"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
graphql_client = "0.10"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.5"
prost = "0.8"
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.5"